# secretary

./: .gitignore  CLAUDE.md  Cargo.toml  NEXTSESSION_BROWSER_PLUGIN.md  NEXT_SESSION.md  README.md  ROADMAP.md  rust-toolchain.toml  secretary_next_session.md
browser/secretary-browser-host/: Cargo.toml
browser/secretary-browser-host/src/: config.rs  enroll.rs  frame.rs  lib.rs  main.rs  origin.rs  origin_match.rs  protocol.rs  secret_source.rs  test_support.rs  vault.rs
browser/secretary-browser-host/tests/: echo.rs  origin_match_kat.rs
browser/secretary-browser-host/tests/data/: origin_match_kat.json
cli/: Cargo.toml
cli/src/: args.rs  daemon.rs  exit.rs  lib.rs  logging.rs  main.rs  pipeline.rs  signal.rs  state.rs  unlock.rs
cli/src/pipeline/: mod.rs  outcomes.rs  passes.rs
cli/src/veto/: interactive.rs  mod.rs  noninteractive.rs  test_util.rs
cli/src/watcher/: debounce.rs  mod.rs  notify_driver.rs  ready.rs
cli/tests/: main_validate.rs  notify_quirk.rs  once_integration.rs  pipeline_integration.rs  sync_pass_integration.rs  two_instance_convergence.rs
core/: Cargo.toml
core/examples/: extract_record_seeds.rs
core/fuzz/: .gitignore  Cargo.toml  README.md  chart.py  monitor.py  rust-toolchain.toml  test_monitor.py
core/fuzz/fuzz_targets/: block_file.rs  bundle_file.rs  contact_card.rs  device_file.rs  manifest_file.rs  record.rs  vault_toml.rs
core/fuzz/seeds/contact_card/: pre_sig.cbor  with_sigs.cbor
core/fuzz/seeds/record/: api_key.cbor  login.cbor  secure_note.cbor
core/fuzz/seeds/vault_toml/: minimal.toml
core/src/: error.rs  lib.rs  version.rs
core/src/crypto/: aead.rs  hash.rs  kdf.rs  kem.rs  mod.rs  secret.rs  sig.rs
core/src/identity/: bip39_wordlist.rs  card.rs  fingerprint.rs  mod.rs
core/src/sync/: bundle.rs  commit.rs  draft.rs  error.rs  ingest.rs  mod.rs  once.rs  outcome.rs  prepare.rs  state.rs
core/src/sync/commit/: apply.rs  mod.rs  write.rs
core/src/unlock/: bundle.rs  bundle_file.rs  device.rs  device_file.rs  mnemonic.rs  mod.rs  vault_toml.rs
core/src/vault/: block.rs  canonical.rs  conflict.rs  device_slot.rs  ids.rs  io.rs  manifest.rs  mod.rs  orchestrators.rs  purge.rs  record.rs  repair.rs  retention.rs  trash_merge.rs  trash_relocation.rs
core/src/vault/repair/: classify.rs  mod.rs  orchestration.rs  policy.rs  sweep.rs
core/tests/: aead.rs  conflict.rs  conformance_kat.rs  convergence.rs  convergence_kat_gen.rs  crash_recovery.rs  create_vault.rs  device_slot.rs  differential_replay.rs  fuzz_regressions.rs  golden_vault_001.rs  golden_vault_002.rs  hash.rs  identity.rs  kat_loader.rs  kdf.rs  kem.rs  open_vault.rs  open_vault_neg.rs  proptest.proptest-regressions  proptest.rs  purge.rs  read_vault_manifest.rs  retention.rs  revoke_block.rs  revoke_kat.rs  save_block.rs  secret.rs  share_block.rs  sig.rs  sync.rs  sync_ingest.rs  sync_ingest_proptest.rs  sync_kat.rs  sync_merge.rs  sync_merge_crash.rs  sync_merge_proptest.rs  sync_merge_toctou.rs  sync_merge_vetoes.rs  sync_pass_kat.rs  (+7 more)
core/tests/common/: fixture_builder.rs  mod.rs
core/tests/conformance_kat_helpers/: dispatch.rs  errors.rs  fixtures.rs  mod.rs  types.rs
core/tests/conformance_kat_helpers/dispatch/: inputs.rs  lifecycle.rs  mod.rs  open.rs  read.rs
core/tests/convergence_helpers/: assert.rs  baseline.rs  device.rs  mod.rs  reconcile.rs  sync_drive.rs
core/tests/data/: argon2id_kat.json  bip39_recovery_kat.json  block_kat.json  card_fingerprint_kat.json  card_kat.cbor  card_kat_signed.cbor  conflict_kat.json  conformance_kat.json  convergence_kat.json  ed25519_kat.json  golden_vault_001_inputs.json  golden_vault_002_inputs.json  hkdf_sha256_kat.json  hybrid_kem_kat.json  hybrid_sig_kat.json  ml_dsa_65_kat.json  ml_kem_768_kat.json  retention_kat.json  sync_kat.json  trash_merge_kat.json  x25519_kat.json  xchacha20poly1305_kat.json
core/tests/data/golden_vault_002/: identity.bundle.enc  manifest.cbor.enc  vault.toml
core/tests/data/revoke_kat/: after_block.cbor.enc  before_block.cbor.enc  inputs.json
core/tests/fixtures/: mod.rs
core/tests/python/: conformance.py  spec_freshness_allowlist.txt  spec_test_name_freshness.py
core/tests/sync_helpers/: mod.rs
core/tests/sync_merge_proptest_helpers/: mod.rs
desktop/secretary-desktop-presence/: Cargo.toml
desktop/secretary-desktop-presence/src/: lib.rs  macos.rs  unsupported.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: auto_lock.rs  constants.rs  dtos.rs  errors.rs  fs_atomic.rs  lib.rs  main.rs  path_auth.rs  presence_pref.rs  recent_vault.rs  reveal.rs  secret_arg.rs  session.rs  settings.rs  timer.rs
desktop/src-tauri/src/dtos/: browse.rs  (+10 more)
desktop/src-tauri/tests/: ipc_integration.rs  session_integration.rs
ffi/secretary-ffi-bridge/: Cargo.toml  README.md
ffi/secretary-ffi-bridge/src/: create.rs  device.rs  error.rs  identity.rs  lib.rs  sync_helpers.rs  test_support.rs  unlock.rs  vault.rs
ffi/secretary-ffi-bridge/tests/: contact_blocks.rs  contacts.rs  edit.rs  empty_trash.rs  purge_block.rs  read_block.rs  recipients.rs  restore_block.rs  retention.rs  revoke_block.rs  save_block.rs  settings.rs  share_block.rs  share_block_proptest.rs  sync_public_api.rs  trash_block.rs  trash_list.rs
ffi/secretary-ffi-py/: Cargo.toml  README.md  pyproject.toml
ffi/secretary-ffi-py/src/: block_crud.rs  contacts.rs  device.rs  errors.rs  identity.rs  lib.rs  purge.rs  record.rs  record_edit.rs  repair.rs  repair_preview.rs  restore.rs  retention.rs  save.rs  settings.rs  share.rs  sync.rs  trash.rs  unlock.rs  vault.rs
ffi/secretary-ffi-py/tests/: test_block_crud.py  test_contacts.py  test_device_slot.py  test_purge.py  test_record_edit.py  test_repair.py  test_retention.py  test_settings.py  test_smoke.py  test_sync.py  test_trash_restore.py
ffi/secretary-ffi-uniffi/: Cargo.toml  README.md  build.rs  uniffi-bindgen.rs
ffi/secretary-ffi-uniffi/src/: errors.rs  lib.rs  namespace.rs  secretary.udl
test-utils/: Cargo.toml
test-utils/src/: lib.rs
(+1456 files in other folders)
