[package]
name = "secretary-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# Promote `secretary-cli` to a library + binary hybrid so integration
# tests under `cli/tests/*.rs` can reach the orchestration modules
# (`pipeline`, `veto`, `unlock`, `state`, `exit`) without going through
# the binary boundary. The binary still ships as `secretary-sync`; the
# library is the same set of modules surfaced under `secretary_cli::*`.
name = "secretary_cli"
path = "src/lib.rs"

[[bin]]
name = "secretary-sync"
path = "src/main.rs"
required-features = ["daemon"]

[features]
default = ["daemon"]
# The headless secretary-sync binary + its file-watch daemon loop, arg parsing,
# TTY veto/password prompts, and structured logging. Gated so secretary-ffi-bridge
# (and the mobile bindings beneath it) can depend on secretary-cli with
# default-features=false and reach only the lean pipeline + state lib surface,
# without compiling notify (inotify/FSEvents/kqueue) or clap into the artifacts.
daemon = ["dep:clap", "dep:notify", "dep:tracing-subscriber", "dep:rpassword", "dep:serde_json"]

[dependencies]
secretary-core = { path = "../core" }
clap = { version = "4", features = ["derive"], optional = true }
notify = { version = "6", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"], optional = true }
dirs = "5"
# `tempfile` exact-pinned to match `core/Cargo.toml`. The CLI's state file
# (per docs/superpowers/specs/2026-05-23-c2-headless-sync-cli-design.md §"State persistence")
# uses NamedTempFile::persist for atomic rename, same discipline as the
# vault format. A regression in persist semantics would silently corrupt
# the SyncState file. Same exact-pin rule as `core` — bump only via
# deliberate changelog review (CLAUDE.md "exact pins on security-critical paths").
tempfile = "=3.27.0"
rpassword = { version = "7", optional = true }
# `serde_json` is a forward-reservation: no file in `cli/src/` currently
# calls it directly, but C.2 spec §D12 specifies structured JSON output for
# veto decisions and future machine-readable reporting.  `tracing-subscriber`'s
# `json` feature already pulls it transitively; listing it explicitly here
# keeps the `daemon` feature boundary honest and prevents a cleanup pass
# from removing it as "dead" before §D12 is implemented.
serde_json = { version = "1", optional = true }
# `fs4` is a maintained fork of the unmaintained `fs2` crate (fs2's last
# release was 2019). Used by Task 2's host-local lockfile through the
# `fs4::FileExt::try_lock` trait method. NOTE: stdlib stabilized an
# inherent `File::try_lock` in Rust 1.89 that shadows the trait; we
# keep fs4 because the workspace MSRV (1.87) is below 1.89, and the
# call site uses UFCS (`Fs4FileExt::try_lock(&file)`) to disambiguate.
fs4 = "1"
thiserror = "2"

# `signal-hook` is Unix-only. Per spec §D10 + CLAUDE.md
# `feedback_windows_not_primary`, we do not add a Windows-specific
# signal-handling crate; the non-Unix surface of `cli/src/signal.rs`
# returns a permanently-false flag with a `tracing::warn!`.
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "=3.27.0"
# `rand` is dev-only and used by `tests/once_integration.rs` to generate
# password values at test runtime instead of hard-coding string literals.
# Literal byte arrays / strings flowing into password / nonce / key
# parameters trip CodeQL's `rust/hard-coded-cryptographic-value` rule
# repeatedly, so test inputs that exercise crypto sinks must be
# runtime-generated (see CLAUDE.md memory `feedback_test_crypto_random_not_hardcoded`).
rand = "0.9"
# `rand_chacha` + `zeroize` are dev-only, used by
# `tests/sync_pass_integration.rs` to rebuild the per-block-divergent
# veto fixture from public `secretary_core` APIs (deterministic
# ChaCha20Rng seeding for block/manifest AEAD; zeroizing the exposed
# Ed25519 secret-key stack copy). Versions track `core/Cargo.toml`.
rand_chacha = "0.3"
zeroize = { version = "=1.8.2", features = ["zeroize_derive"] }

[lints]
workspace = true
