[package]
name = "secretary-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Secretary cryptographic core: vault format, identity, and unlock primitives."

[dependencies]
base64 = "0.22"
bip39 = { version = "2", features = ["zeroize"] }
toml = "0.8"
unicode-normalization = "0.1"
thiserror = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
subtle = "2"
blake3 = "1"
sha3 = "0.10"
sha2 = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
serde = { version = "1", features = ["derive"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
ml-kem = { version = "0.2", features = ["deterministic"] }
ed25519-dalek = { version = "2.2", default-features = false, features = ["std", "rand_core", "zeroize"] }
ml-dsa = { version = "0.1.0-rc.8", default-features = false, features = ["alloc", "zeroize"] }
ciborium = "0.2"
rand_core = "0.6"

[dev-dependencies]
proptest = "1"
rand_chacha = "0.3"
serde_json = "1"

[lints]
workspace = true
