[package]
name = "secretary-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Secretary cryptographic core: vault format, identity, and unlock primitives."

[dependencies]
base64 = "0.22"
bip39 = { version = "2", features = ["zeroize"] }
toml = "0.8"
unicode-normalization = "0.1"
thiserror = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
subtle = "2"
blake3 = "1"
sha3 = "0.10"
sha2 = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
serde = { version = "1", features = ["derive"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
ml-kem = { version = "0.2", features = ["deterministic"] }
ed25519-dalek = { version = "2.2", default-features = false, features = ["std", "rand_core", "zeroize"] }
ml-dsa = { version = "0.1.0-rc.8", default-features = false, features = ["alloc", "zeroize"] }
ciborium = "0.2"
rand_core = "0.6"
# `tempfile` is on the security-critical path: `vault::io::write_atomic`
# (docs/vault-format.md §9) uses `NamedTempFile::persist` to perform
# atomic rename(2) / MoveFileExW under the manifest and block writes.
# A regression in `tempfile`'s persist semantics (e.g. fallback to a
# non-atomic copy) would silently weaken the §9 atomicity guarantee
# that orchestrator crash-recovery relies on. Pinned to an EXACT
# version (not a caret range) so that any patch / minor / major bump
# requires editing this line — and therefore a deliberate changelog
# review. Cargo's default `"3"` is shorthand for `^3` and would let
# `cargo update` silently move the resolved version within the 3.x
# range; that auto-bump is exactly what we don't want here.
tempfile = "=3.27.0"

[features]
differential-replay = []

[dev-dependencies]
proptest = "1"
rand_chacha = "0.3"
serde_json = "1"

[lints]
workspace = true
