[package]
name = "secretary-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Secretary cryptographic core: vault format, identity, and unlock primitives."

[dependencies]
base64 = "0.22"
bip39 = { version = "2", features = ["zeroize"] }
toml = "0.8"
unicode-normalization = "0.1"
thiserror = "2"
# `zeroize` is on the security-critical path: every secret-bearing type in
# the crate (`SecretBytes`, `SecretString`, `Sensitive<T>`, plus the wrapper
# types in `identity` / `unlock` / `vault::record`) relies on its
# `Zeroize` impls for `Vec<u8>` and `String` zeroizing the heap allocation
# up to `capacity`, not just `len`. A regression in that behaviour would
# leave residue in freed allocations of records, mnemonics, and KDF
# outputs without any test failure surfacing it. Pinned to an EXACT
# version (not a caret range) so that any patch / minor / major bump
# requires editing this line — and therefore a deliberate changelog
# review of the relevant `Zeroize` impls. Same discipline as `tempfile`
# below; same reason — the failure mode is silent.
zeroize = { version = "=1.8.2", features = ["zeroize_derive"] }
# Constant-time-sensitive crates are EXACT-pinned (#370), same discipline as
# `zeroize`/`tempfile`: a `cargo update` must not silently move a crate whose
# security property is a *timing* invariant (constant-time comparison / field
# arithmetic). KATs catch functional divergence but NOT a side-channel
# regression, so each bump requires a deliberate edit + review. The #354
# cargo-audit gate then flags any advisory against the pinned version.
subtle = "=2.6.1"
blake3 = "1"
sha3 = "0.10"
sha2 = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
serde = { version = "1", features = ["derive"] }
# Exact-pinned (#370): x25519/ed25519-dalek pull curve25519-dalek, whose field
# arithmetic is the constant-time boundary (cf. RUSTSEC-2024-0344). See the
# subtle comment above for the rationale.
x25519-dalek = { version = "=2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }
# `zeroize` wipes the ML-KEM DecapsulationKey's expanded internal state
# (dk_pke + z) on drop; without it the long-term PQ secret key lingers in freed
# heap after every decap. Parity with the other secret-bearing crypto deps
# (x25519-dalek / ed25519-dalek / ml-dsa / bip39 all enable zeroize). See #357.
ml-kem = { version = "0.2", features = ["deterministic", "zeroize"] }
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["std", "rand_core", "zeroize"] }
ml-dsa = { version = "0.1.0-rc.8", default-features = false, features = ["alloc", "zeroize"] }
ciborium = "0.2"
rand_core = "0.6"
# `tempfile` is on the security-critical path: `vault::io::write_atomic`
# (docs/vault-format.md §9) uses `NamedTempFile::persist` to perform
# atomic rename(2) / MoveFileExW under the manifest and block writes.
# A regression in `tempfile`'s persist semantics (e.g. fallback to a
# non-atomic copy) would silently weaken the §9 atomicity guarantee
# that orchestrator crash-recovery relies on. Pinned to an EXACT
# version (not a caret range) so that any patch / minor / major bump
# requires editing this line — and therefore a deliberate changelog
# review. Cargo's default `"3"` is shorthand for `^3` and would let
# `cargo update` silently move the resolved version within the 3.x
# range; that auto-bump is exactly what we don't want here.
tempfile = "=3.27.0"
# `tracing` is used by `sync::ingest` to log silent-rejection
# diagnostics at `tracing::debug!` when a candidate conflict-copy
# fails one of the five MUST authentication rules. Caret-range pin is
# acceptable here: tracing is a logging facade, not on the
# security-critical path (the on-disk byte format and crypto
# primitives are unchanged whether logs are captured or not).
tracing = "0.1"

[features]
differential-replay = []

[dev-dependencies]
proptest = "1"
rand_chacha = "0.3"
# `preserve_order` keeps serde_json::Value backed by IndexMap instead of
# BTreeMap so the conformance KAT generator (core/tests/conformance_kat.rs)
# round-trips the file without alphabetising every key. Without this, every
# regenerated KAT diff looks like a full rewrite and obscures the actual
# semantic change.
serde_json = { version = "1", features = ["preserve_order"] }
# Used by core/tests/conformance_kat.rs to decode UUID-hex / bytes-hex
# fields in the KAT into the [u8; 16] / Vec<u8> shapes the bridge crate
# accepts. Caret-range "0.4" is fine here — this is a test-only dev-dep,
# unlike the bridge crate's runtime-path use of the same crate at the
# same major.minor.
hex = "0.4"
# Conformance KAT replay (core/tests/conformance_kat.rs) drives the bridge
# crate directly so the Rust-side replay is structurally identical to the
# Swift / Kotlin replays. Test-only; excluded from the runtime dependency tree.
secretary-ffi-bridge = { path = "../ffi/secretary-ffi-bridge" }

[lints]
workspace = true
