[package]
name = "secretary-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# Both a [lib] and a [[bin]]. Integration tests in `tests/*.rs` link against
# the library (`use secretary_desktop::...`); the binary is the Tauri entry
# point. main.rs imports modules from the library so behaviour stays single-
# sourced.
[lib]
name = "secretary_desktop"
path = "src/lib.rs"

[[bin]]
name = "secretary-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2.x. Features kept minimal: window for the main window, no
# tray icon / no auto-updater / no clipboard / no shell — D.1.1 doesn't
# need any of those. Add features per-slice as D.1.x grows.
tauri = { version = "2", features = [] }

# Task 2 pure modules:
# - `secretary-ffi-bridge` is consumed for `FfiVaultError` + the open / read /
#   save vault entry points used by Task 3's `VaultSession`. Workspace path
#   dep — not an FFI hop.
# - `serde` / `serde_json` for the serde-tagged `AppError` / `AppWarning`
#   discriminated unions that cross the Tauri IPC seam.
# - `thiserror` for derive-based `Error` impls.
# - `tracing` for structured logs on the Rust side (developer-facing
#   `detail` fields are logged here but stripped before IPC serialization).
# - `sha2` + `hex` for the deterministic SHA-256-derived UUID helper and
#   the frozen-UUID tripwire tests in `constants::tests`.
# Versions track the workspace conventions already used by `core/` and
# `ffi/secretary-ffi-bridge/`.
secretary-ffi-bridge = { path = "../../ffi/secretary-ffi-bridge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"

# Task 3 vault I/O additions:
# - `tempfile` exact-pinned per CLAUDE.md atomic-write discipline; matches
#   `core/Cargo.toml` so a `cargo update` cannot silently move the resolved
#   version inside the 3.x range. Drives the atomic `persist(...)` rename
#   for the per-vault device UUID file.
# - `dirs` for the platform-canonical `data_dir()` lookup
#   (`~/Library/Application Support/...` on macOS,
#   `~/.local/share/...` on Linux). v5; the API surface used here
#   (`dirs::data_dir`) has been stable since v2.
# - `rand` for the per-vault device UUID generation (16 bytes from OsRng).
#   The same version is already in the workspace transitively via
#   `secretary-core`'s zeroize / crypto stack.
tempfile = "=3.27.0"
dirs = "5"
rand = "0.8"

[lints]
workspace = true

[dev-dependencies]
# `tempfile` is already a hard dep above (used by `settings::load_or_create_device_uuid`).
# Re-declared at the same exact pin for explicit use in `tests/*.rs` integration
# tests; the duplicate pin keeps the version locked even if a future refactor
# moves the production dep elsewhere.
tempfile = "=3.27.0"
