[package]
name = "secretary-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# Both a [lib] and a [[bin]]. Integration tests in `tests/*.rs` link against
# the library (`use secretary_desktop::...`); the binary is the Tauri entry
# point. main.rs imports modules from the library so behaviour stays single-
# sourced.
[lib]
name = "secretary_desktop"
path = "src/lib.rs"

[[bin]]
name = "secretary-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2.x. Features kept minimal: window for the main window, no
# tray icon / no auto-updater / no clipboard / no shell — D.1.1 doesn't
# need any of those. Add features per-slice as D.1.x grows.
tauri = { version = "2", features = [] }

# Task 2 pure modules:
# - `secretary-ffi-bridge` is consumed for `FfiVaultError` + the open / read /
#   save vault entry points used by Task 3's `VaultSession`. Workspace path
#   dep — not an FFI hop. As of the mobile-vault-settings epic (Task 6) it is
#   also the single source of truth for the settings schema/parse/I-O
#   (`Settings`, `parse_settings_fields`, `read_settings`, `write_settings`,
#   `deterministic_uuid_16`, and the bound constants) — desktop's
#   `constants.rs` / `settings/parse.rs` / `settings/io.rs` re-export/delegate
#   rather than redefine.
# - `serde` / `serde_json` for the serde-tagged `AppError` / `AppWarning`
#   discriminated unions that cross the Tauri IPC seam.
# - `thiserror` for derive-based `Error` impls.
# - `tracing` for structured logs on the Rust side (developer-facing
#   `detail` fields are logged here but stripped before IPC serialization).
# - `hex` for hex-encoding UUIDs (device-uuid path encoding, error `detail`
#   fields). The SHA-256-derived deterministic UUID helper itself now lives
#   in the bridge crate; desktop no longer depends on `sha2` directly.
# Versions track the workspace conventions already used by `core/` and
# `ffi/secretary-ffi-bridge/`.
secretary-ffi-bridge = { path = "../../ffi/secretary-ffi-bridge" }
# `secretary-core` is pulled in for `SecretString` / `SecretBytes`, the
# zeroize-typed wrappers required to construct `bridge::FieldInputValue::Text`
# / `::Bytes`. The bridge does not re-export them; both its own tests and
# `ffi/secretary-ffi-py` import them directly from core via the same
# `secretary_core::crypto::secret::{SecretString, SecretBytes}` path.
secretary-core = { path = "../../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
hex = "0.4"

# D.1.2 reveal path additions:
# - `base64`: encodes already-revealed `bytes` field plaintext for display/copy.
#   Not on the crypto path — the bytes are already past the FFI expose boundary.
#   Version matches the workspace-resolved 0.22.
# - `zeroize`: overwrite the intermediate Vec<u8> from FieldHandle::expose_bytes
#   after base64-encoding it, so the raw secret bytes don't linger on the
#   stack/heap between expose and drop. Exact pin matches core/Cargo.toml.
base64 = "0.22"
zeroize = "=1.8.2"

# Task 3 vault I/O additions:
# - `tempfile` exact-pinned per CLAUDE.md atomic-write discipline; matches
#   `core/Cargo.toml` so a `cargo update` cannot silently move the resolved
#   version inside the 3.x range. Drives the atomic `persist(...)` rename
#   for the per-vault device UUID file.
# - `dirs` for the platform-canonical `data_dir()` lookup
#   (`~/Library/Application Support/...` on macOS,
#   `~/.local/share/...` on Linux). v5; the API surface used here
#   (`dirs::data_dir`) has been stable since v2.
# - `rand` for the per-vault device UUID generation. The 16 bytes come
#   from `rand::rngs::OsRng` (OS CSPRNG) directly — not `rand::rng()` —
#   matching the `rand_core::OsRng` discipline used throughout `core/src`
#   for security-critical randomness. Pinned to `0.9` to share the major
#   already in the workspace via `cli/Cargo.toml`, rather than introducing
#   a parallel `rand 0.8` chain.
tempfile = "=3.27.0"
dirs = "5"
rand = "0.9"
# `rand_core` 0.6 `OsRng` is the CSPRNG passed into core's
# `vault::orchestrators::create_vault` (D.1.3 create path). The version is
# pinned to 0.6 to match `core/` and `ffi/secretary-ffi-bridge/` — core's
# `impl RngCore + CryptoRng` bound is the 0.6 trait, which the desktop's
# existing `rand 0.9` OsRng does NOT satisfy. `getrandom` enables `OsRng`.
rand_core = { version = "0.6", features = ["getrandom"] }

# Task 4 IPC additions:
# - `tracing-subscriber` is used only by the binary (`main.rs`) to install
#   a stderr fmt subscriber so the `tracing::warn!` calls in error mappers
#   and session paths are visible when running the desktop binary from a
#   terminal. The library half doesn't depend on it — integration tests
#   in `tests/*.rs` run without an installed subscriber and the
#   `tracing::warn!` calls become no-ops, which is what we want.
#   `env-filter` lets `RUST_LOG` tune verbosity at runtime.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PR #353: Dialog plugin refactoring
# - `tauri-plugin-dialog` is now driven by the Rust BACKEND `pick_*` commands
#   in `src/commands/pick.rs` to open native file/folder dialogs server-side.
#   The webview no longer opens dialogs directly. The JS-side companion
#   (`@tauri-apps/plugin-dialog`) and the `dialog:allow-open` capability have
#   been removed; no dialog permissions are exposed to the frontend.
#
# Caret range (not the exact-pin convention used by `tempfile`): the
# dialog plugin is UI-only and no key material or vault bytes cross
# it — the JS side receives only the chosen folder path (a string
# already inside our trust boundary). No security-critical guarantee
# rides on a specific 2.x patch version, so the standard caret range
# is appropriate here.
tauri-plugin-dialog = "2"

# D.1.2 clipboard write for the "copy secret" affordance. Write-only — no
# clipboard read permission (reading the clipboard is a sensitive capability
# for a secrets manager; we grant only `clipboard-manager:allow-write-text`
# in capabilities/default.json). Caret range is appropriate here for the
# same reason as `tauri-plugin-dialog`: no secret bytes cross this seam, so
# no security-critical guarantee rides on a specific 2.x patch version.
tauri-plugin-clipboard-manager = "2"

[lints]
workspace = true

[dev-dependencies]
# `tempfile` is already a hard dep above (used by `settings::load_or_create_device_uuid`).
# Re-declared at the same exact pin for explicit use in `tests/*.rs` integration
# tests; the duplicate pin keeps the version locked even if a future refactor
# moves the production dep elsewhere.
tempfile = "=3.27.0"
