[package]
name = "secretary-ffi-bridge"
version = "0.1.0"
edition = "2021"
publish = false
description = "FFI-friendly facade of secretary-core; projected through PyO3 (secretary-ffi-py) and uniffi (secretary-ffi-uniffi). Single source of code truth for FFI thinned-error mapping and opaque-handle wrappers."

[lints]
workspace = true

[dependencies]
secretary-core = { path = "../../core" }
# `rand_core::OsRng` feeds the OS CSPRNG into core's `create_vault`. Match
# the version pinned in core/Cargo.toml so we share the lock entry. The
# `getrandom` feature is required to enable the `OsRng` type.
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2"
# `zeroize` is on the security-critical path: opaque handles wrapping
# secret-bearing core types must zeroize on drop. Pinned to an EXACT
# version (not a caret range) so that any patch / minor / major bump
# requires a deliberate changelog review of the relevant `Zeroize`
# impls. Same discipline as core/Cargo.toml; same reason — the failure
# mode is silent.
zeroize = "=1.8.2"

[dev-dependencies]
# Match the version pinned in core/Cargo.toml so we share the lock entry.
rand_chacha = "0.3"
# exact pin matching core/Cargo.toml so the workspace shares one resolved
# version; TempDir is used here only for ephemeral test directories (no
# atomicity invariants — that's the runtime dep's contract).
tempfile = "=3.27.0"
# used by block_summaries_returns_pinned_layout_for_v1 to parse the
# golden_vault_001_inputs.json cross-check.
serde_json = "1"
# used by block_summaries_returns_pinned_layout_for_v1 for byte→hex formatting.
hex = "0.4"
